# chainq

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
chainq/: __init__.py  cache.py  cli.py  config.py  errors.py  evm.py  fmt.py  http.py  links.py  networks.py  output.py  rpc.py  solana.py  tokens.py  update.py
chainq/commands/: aave.py  address.py  aerodrome.py  buybacks.py  chain.py  config.py  curve.py  etf.py  ethena.py  evm.py  evm_chain.py  evm_codec.py  hl.py  kamino.py  lido.py  lighter.py  llama.py  market.py  morpho.py  nft.py  pendle.py  portfolio.py  protocols.py  sky.py  stables.py  uniswap.py  yields.py
chainq/providers/: aave.py  aerodrome.py  buybacks.py  coingecko.py  coingecko_data.py  curve.py  defillama.py  ethena.py  hyperliquid.py  kamino.py  lido.py  lighter.py  morpho.py  opensea.py  pendle.py  sky.py  theblock.py  uniswap.py  uniswap_data.py
npm/: README.md  package.json
plans/: 001-solana-mints-in-price-asset.md  002-generic-contract-read.md  003-cross-protocol-yields.md  004-tx-decode.md  005-uniswap-quote.md  006-polymarket.md  007-robinhood-chain.md  008-kamino-lending.md  009-pump-pumpswap.md  README.md
scripts/: chainq.rb.tmpl  gen_changelog.py  update_tap_formula.py
site/: index.html  package.json  pnpm-lock.yaml
site/public/: llms-full.txt  llms.txt
site/scripts/: gen-llms-full.mjs
site/src/: main.ts  style.css
skills/chainq/: SKILL.md
tests/: test_buybacks.py  test_cache.py  test_cli_registration.py  test_config_cmd.py  test_etf.py  test_evm.py  test_fmt.py  test_kamino.py  test_links.py  test_live.py  test_market_routing.py  test_networks.py  test_output.py  test_rpc.py  test_solana.py  test_tokens.py  test_update.py  test_yields.py
