[project]
name = "chainq"
version = "0.16.0"
description = "Agent-friendly CLI for retrieving and transforming crypto and onchain data across EVM, Solana, markets, and DeFi."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["crypto", "cli", "web3", "ethereum", "defi", "blockchain", "agents", "onchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27",
    "pydantic-settings>=2.6",
    "typer>=0.12",
    "web3>=7.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[project.urls]
Homepage = "https://chainq.serhiifotex.dev/"
Repository = "https://github.com/Sergio-prog/chainq"
Issues = "https://github.com/Sergio-prog/chainq/issues"
Roadmap = "https://github.com/Sergio-prog/chainq/blob/main/ROADMAP.md"

[project.scripts]
chainq = "chainq.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chainq"]

[tool.ruff]
line-length = 128
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not live'"
markers = [
    "live: exercises real provider endpoints over the network; run with `-m live`",
]
